--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,4 +4,13 @@
 @import 'libs';
 @import 'global';
 
+.header{
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+}
+
 
