--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,7 +5,7 @@
 @import "global";
 
 .header {
-    box-shadow: 0 4px 4px -2px rgb(0, 0, 0,25%);
+    box-shadow: 0 4px 4px -2px rgba(#000, 0.25);
 
     &__inner {
         display: flex;
@@ -42,5 +42,170 @@
         font-family: "Montserrat Alternates", sans-serif;
         font-weight: 700;
         color: $default-color;
+    }
+}
+
+.footer {
+    background-color: #dfdfdf;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 60px;
+        padding-bottom: 80px;
+    }
+    &__info {
+        max-width: 540px;
+    }
+    &__info-title {
+        line-height: 23px;
+        margin-bottom: 14px;
+        color: $title-color;
+    }
+    &__info-text {
+        margin-bottom: 16px;
+        color: $default-color;
+
+    }
+    &__info-email {
+        color: $title-color;
+        font-weight: 600;
+        font-size: 14px;
+        padding-left: 28px;
+        position: relative;
+        margin-bottom: 22px;
+        display: inline-block;
+        &::before {
+            position: absolute;
+            top: 9px;
+            left: 0;
+            content: "";
+            width: 16px;
+            height: 12px;
+            background-image: url(../images/email.svg);
+        }
+    }
+    &__form {
+        display: flex;
+    }
+    &__form-input {
+        width: 100%;
+        border-radius: 21px;
+        padding: 6px 10px 6px 18px;
+        border: 1px solid $title-color;
+        background-color: transparent;
+        &:focus {
+            outline: none;
+        }
+        
+    }
+    &__form-btn {
+        border-radius: 21px;
+        font-weight: 600;
+        padding: 6px 12px;
+        width: 160px;
+        color: #fffff0;
+        background-color: $title-color;
+        margin-left: 9px;
+        &:focus {
+            outline: none;
+        }
+    }
+    &__social-item{
+        margin-bottom: 15px;
+        padding-left: 28px;
+        position: relative;
+        
+    }
+    &__social-link{
+        color: #707070;
+        font-weight: 600;
+        font-size: 14px;
+    }
+
+    &__social-link--facebook{
+        &::before {
+            position: absolute;
+            top: 7px;
+            left: 0;
+            content: "";
+            width: 16px;
+            height: 16px;
+            background-image: url(../images/facebook.svg);
+        }
+
+    }
+    &__social-link--instagram{
+        &::before {
+            position: absolute;
+            top: 9px;
+            left: 0;
+            content: "";
+            width: 14px;
+            height: 14px;
+            background-image: url(../images/instagram.svg);
+        }
+
+    }
+    &__social-link--pinterest{
+        &::before {
+            position: absolute;
+            top: 7px;
+            left: 0;
+            content: "";
+            width: 16px;
+            height: 16px;
+            background-image: url(../images/pinterest.svg);
+        }
+
+    }
+    &__social-link--whatsapp{
+        &::before {
+            position: absolute;
+            top: 9px;
+            left: 0;
+            content: "";
+            width: 14px;
+            height: 14px;
+            background-image: url(../images/whatsapp.png);
+        }
+
+    }
+    &__social-link--youtube{
+        &::before {
+            position: absolute;
+            top: 9px;
+            left: 0;
+            content: "";
+            width: 19px;
+            height: 13px;
+            background-image: url(../images/youtube.svg);
+        }
+
+    }
+
+
+    &__menu-item{
+        margin-bottom: 15px;
+    }
+    &__menu-link{
+        color: #707070;
+        font-weight: 600;
+        font-size: 14px;
+
+    }
+
+
+    .copyright {
+        text-align: center;
+        background-color: $title-color;
+        border: 1px solid $title-color;
+
+
+
+        padding: 42px 0 41px;
+        p {
+            color: #a1a1a1;
+        }
     }
 }
