--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,15 +1,21 @@
 html,
 body {
 	height: 100%;
+	
+	
 }
 body{
 	@extend %default-font;
+	overflow-x: hidden;
+	height: auto;
+
 }
 
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
+	
+
 }
 
 .main {
@@ -17,6 +23,7 @@ body{
 }
 .footer {
 	flex: 0 0 auto;
+	
 }
 
 .container{
