--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -45,38 +45,41 @@
     }
 }
 .rightside-menu {
-    background-color: #fff;
-    position: absolute;
+    background-color: #fcfcfc;
+    position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
-    max-width: 694px;
+    right: 0px;
+    // bottom: 0;
+    max-width: 594px;
     width: 100%;
     padding-top: 40px;
     z-index: 100;
-    &__btn {
-        background-color: transparent;
-        border: none;
+    padding-bottom: 100px;
+    height: 100%;
+
+    &__input-checkbox {
+        display: none;
+    }
+    &__btn-close {
         cursor: pointer;
         padding-left: 50px;
         margin-bottom: 30px;
-
-        &:focus {
-            outline: none;
-        }
     }
-    &__content{
+    // &__btn--active{
+
+    // }
+    &__content {
         text-align: center;
         margin: 0 auto;
         max-width: 483px;
     }
-    &__content-logo{
+    &__content-logo {
         margin: 0 auto;
         margin-bottom: 40px;
         max-width: 194px;
         width: 100%;
     }
-    &__content-title{
+    &__content-title {
         @extend %title-font;
         color: $title-color;
         font-size: 36px;
@@ -84,24 +87,24 @@
         margin-bottom: 17px;
 
         position: relative;
-        &::after{
+        &::after {
             position: absolute;
-            
+
             left: 50%;
             transform: translate(-50%, -50%);
             bottom: 0;
-            content: '';
-            background-color: #6D7278;
+            content: "";
+            background-color: #6d7278;
             width: 252px;
             height: 1px;
         }
     }
-    &__content-text{
+    &__content-text {
         margin-bottom: 75px;
     }
-    &__content-img{
+    &__content-img {
         margin: 0 auto;
-        max-width: 483px;
+        max-width: 383px;
         width: 100%;
     }
 }
