--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -114,7 +114,7 @@
     }
 }
 
-.main-top {
+.main-content {
     &__left {
         width: 45%;
         position: relative;
@@ -130,7 +130,7 @@
         z-index: -1;
     }
     &__slide {
-        display: flex;
+        display: flex!important;
     }
 
     &__right {
