call-to-action is done

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -26,8 +26,13 @@ body {
 	margin: 0 auto;
 	padding: 0 15px;
 }
-.container-about {
-	max-width: 1920px;
+.container-middle {
+	max-width: 1372px;
 	margin: 0 auto;
 	padding: 0 15px;
+}
+.container-max {
+	max-width: 1920px;
+	margin: 0 auto;
+	padding: 0 0px;
 }
