--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -503,6 +503,44 @@
     }
 }
 
+.blog{
+    padding-bottom: 100px;
+    &__heading{
+        @extend %title-font;
+        line-height: 51px;
+        font-size: 36px;
+        text-align: center;
+        color: $title-color;
+        width: 450px;
+        margin: 0 auto;
+        padding-bottom: 30px;
+    }
+    &__posts{
+        display: flex;
+        justify-content: space-between;
+    }
+    &__post{
+        margin: 0 15px;
+        width: 50%;
+    }
+    &__post-image{
+        margin: 0 auto 20px;
+        width: 100%;
+    }
+    &__post-category{
+        margin-bottom: 10px;
+        font-size: 14px;
+        color: #707070;
+    }
+    &__post-text{
+        @extend %title-font;
+        color: $title-color;
+        font-size: 24px;
+        line-height: 38px;
+
+    }
+}
+
 .footer {
     background-color: #dfdfdf;
 
