--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,8 @@
 @import "libs";
 @import "global";
 @import "about";
+@import "gallery";
+
 
 .header {
     box-shadow: 0 4px 4px -2px rgba(#000, 0.25);
@@ -474,6 +476,9 @@
 }
 
 .gallery {
+    padding-left: 10px;
+    padding-right: 10px;
+
     padding-bottom: 88px;
     &__filter {
         text-align: center;
@@ -489,6 +494,7 @@
         padding: 6px 16px;
         cursor: pointer;
         transition: 0.6s;
+        margin: 0 12px;
         &:hover {
             border: 1px solid rgba(255, 238, 51, 0.5);
             color: $title-color;
@@ -501,13 +507,16 @@
         grid-gap: 30px;
     }
     &__left-image {
-        align-self: stretch;
+        width: 100%;
     }
     &__right {
         display: grid;
         // justify-items: stretch;
         grid-template-columns: 1fr 1fr;
         grid-gap: 30px;
+    }
+    &__right-image{
+        width: 100%;
     }
 }
 
