content side of blog-page is copmleted

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,4 +1,4 @@
-.about-heading {
+.about-page {
     background-image: url(../images/about/about-bg.jpg);
     background-size: cover;
     margin-bottom: 129px;
